--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       httpRequest.open('GET', publishedDocUrl)
       httpRequest.send()
     </script>
+    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
